--- a/contacto.html
+++ b/contacto.html
@@ -6,47 +6,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+	
+    <!--Fuentes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ysabeau&display=swap" rel="stylesheet">
+
+    <!--Slider-->
+    <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
+<link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
     <title>Gaia Holística</title>
 </head>
 
 <body>
         <header class="header">	
-            <img class="imag" src="img/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
-        <div class="container">
-          <a class="btn" href="index.html">Inicio</a>
-		  <a class="btn" href="hacer.html">¿Que hacemos?</a>
-		  <a class="btn" href="reservas.html">Reservas</a>
-          <a class="btn" href="contacto.html">Contacto</a>
-		</div>
+			<div class="contenedor">
+				<img class="imag" src="img/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
+			</div>    
+				<nav> 
+				<ul class="nav">
+					<li><a class="btn" href="index.html">Inicio</a></li>
+					<li><a class="btn" href="hacer.html">¿Que hacemos?</a>
+					
+						<!--menu desplegable-->
+					<ul>
+					<li><a class="btn" href="#parrafo1">¿Que es el Reiki?</a></li>
+					<li><a class="btn" href="#parrafo2">Parrafo 2</a></li>
+					<li><a class="btn" href="#parrafo3">Parrafo 3</a></li>
+					<li><a class="btn" href="#parrafo4">Parrafo 4</a></li>
+					<li><a class="btn" href="https://api.whatsapp.com/send/?</li>phone=5491149720228 ">Whatsapp </a></li>
+					<li><a class="btn" href="mailto:direccion@destinatario.com?&subject=Asunto</li>%20con%20espacios&body=mensaje">
+						Enviar mail</a>
+					</ul>
+					</li>
+					<!--fin <desplegable--></desplegable-->                
+					
+					<li><a class="btn" href="reservas.html">Reservas</a></li>
+					<li><a class="btn" href="contacto.html">Contacto</a></li>
+				</ul>
+				</nav>
         </header>
 <main>
-	<h1>Contactenos</h1>
-	<form name="contact" method="POST" data-netlify="true">
-		<p>
-			<label>Your Name: <input type="text" name="name" /></label>
-		</p>
-		<p>
-			<label>Your Email: <input type="email" name="email" /></label>
-		</p>
-		<p>
-			<label>Your Role: <select name="role[]" multiple>
-			<option value="leader">Leader</option>
-			<option value="follower">Follower</option>
-			</select></label>
-		</p>
-		<p>
-			<label>Message: <textarea name="message"></textarea></label>
-		</p>
-		<p>
-			<button type="submit">Send</button>
-		</p>
-	</form>
+	<input type="checkbox" id="menu-check">
+	<label id="menu" for="menu-check">
+		<span id="menu-abrir">&#9776</span>
+		<span id="menu-cerrar">X</span>
+	</label>   
+	<h2>Formulario de registro</h2>
+
+    <form id="formulario" onsubmit="return validarFormulario()">
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre"><br>
+
+		<label for="apellido">Apellido:</label>
+        <input type="text" id="apellido" name="apellido"><br>
+
+        <label for="dni">DNI:</label>
+        <input type="text" id="dni" name="dni"><br>
+
+        <label for="direccion">Dirección:</label>
+        <input type="text" id="direccion" name="direccion"><br>
+
+        <input type="submit" value="Enviar">
+		<input type="reset" value="Borrar">
+    </form>
 </main>
       <footer>
       <div class="container">
         <p>&copy; All rights reserved.</p>
       </div>
       </footer>
+
+	  <script src="main.js"></script>
 </body>
 
 </html>
