--- a/hacer.html
+++ b/hacer.html
@@ -6,56 +6,188 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+
+    <!--Fuentes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ysabeau&display=swap" rel="stylesheet">
+
+    <!--Slider-->
+    <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
+<link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
     <title>Gaia Holística</title>
 </head>
 
 <body>
-        <header class="header">    
-	<div class="contenedor">	
+    <header class="header">
+        <input type="checkbox" id="menu-check">
+        <label id="menu" for="menu-check">
+            <span id="menu-abrir">&#9776</span>
+            <span id="menu-cerrar">X</span>
+        </label>   
+        <h3 id="lista"></h3>
+        <div class="contenedor">
             <img class="imag" src="img/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
+        </div>    
+            <nav> 
+            <ul class="nav">
+                <li><a class="btn" href="index.html">Inicio</a></li>
+                <li><a class="btn" href="hacer.html">¿Que hacemos?</a>
+                
+                    <!--menu desplegable-->
+                <ul>
+                <li><a class="btn" href="#parrafo1">¿Que es el Reiki?</a></li>
+                <li><a class="btn" href="#parrafo2">Parrafo 2</a></li>
+                <li><a class="btn" href="#parrafo3">Parrafo 3</a></li>
+                <li><a class="btn" href="#parrafo4">Parrafo 4</a></li>
+                <li><a class="btn" href="https://api.whatsapp.com/send/?</li>phone=5491149720228 ">Whatsapp </a></li>
+                <li><a class="btn" href="mailto:direccion@destinatario.com?&subject=Asunto</li>%20con%20espacios&body=mensaje">
+                    Enviar mail</a>
+                </ul>
+                </li>
+                <!--fin <desplegable--></desplegable-->                
+                
+                <li><a class="btn" href="reservas.html">Reservas</a></li>
+                <li><a class="btn" href="contacto.html">Contacto</a></li>
+            </ul>
+            </nav>
+    </header>
+    <main class="contenido">
         <div class="container">
-          <a class="btn" href="index.html">Inicio</a>
-		  <a class="btn" href="hacer.html">¿Que hacemos?</a>
-		  <a class="btn" href="reservas.html">Reservas</a>
-          <a class="btn" href="contacto.html">Contacto</a>
-		</div>
-    </div>
-        </header>
-	</div>
-        <main class="contenido">
-            <h1>Contenido</h1>
+        <div id="parrafo1">
+            <h2>El Reiki</h2>
             <p class="texto">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis rutrum gravida. Aliquam vel
-                nunc sit amet nibh aliquam sollicitudin eu vitae elit. Duis varius turpis est, at feugiat metus blandit
-                non. Mauris est nunc, ullamcorper nec egestas at, faucibus ac ex. Cras gravida ut odio eget vulputate.
-                Suspendisse ut nunc cursus, vulputate tortor id, mollis magna. Proin mattis euismod magna. Suspendisse
-                mattis, nunc vitae mattis iaculis, elit massa facilisis magna, ac consequat magna lacus sit amet lectus.
-                Suspendisse a lacinia est, a semper turpis. Phasellus lobortis eget nibh in scelerisque. Morbi feugiat
-                volutpat nisl, vehicula commodo augue volutpat at. Aenean aliquet tristique diam. Aenean maximus, quam
-                non sollicitudin efficitur, est sapien pharetra odio, eget aliquam justo urna eu eros. Donec nec
-                tincidunt tortor.
-                <br><br>
-
-                Maecenas pharetra pretium quam ut posuere. Quisque luctus sem purus. Phasellus vel nibh sed erat
-                interdum placerat eget a dui. Vivamus viverra pharetra congue. Sed pretium mi eu dui congue pulvinar.
-                Donec felis risus, malesuada quis tristique faucibus, vestibulum non urna. Fusce nec orci pulvinar,
-                blandit velit quis, finibus neque. Mauris malesuada metus eget ornare pellentesque. Nunc pharetra ante
-                eget ullamcorper finibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur
-                ridiculus mus. Nulla maximus a dolor non condimentum. Suspendisse convallis ullamcorper justo.
-                <br><br>
-
-                Nullam ut erat sit amet elit ultricies tempor vel eget magna. Vivamus vitae diam purus. Fusce semper
-                nisl a nulla congue feugiat. Maecenas et tincidunt felis, dapibus rhoncus sapien. Maecenas tortor
-                tortor, sagittis ac mattis sed, ullamcorper et orci. Pellentesque quis mollis massa. Donec lacinia
-                turpis sapien, eu tincidunt dui rutrum elementum. Maecenas dictum et metus eget aliquam. Sed imperdiet
-                lacinia vulputate. Vivamus mauris arcu, faucibus pulvinar laoreet sed, scelerisque et dui.
+                Es una terapia basada en la transmisión de energía a través de las manos. El objetivo del Reiki es
+                buscar y encontrar el equilibrio físico, mental y espiritual.
+                Sanación Cuántica                
+                Favorece la armonía y restitución de la salud tanto física como mental, emocional y espiritual por medio de la transmutación de las energías nocivas.        
+                Decodificación Celular                
+                Se activan ciertos códigos en las células, para que recuperen un comportamiento armónico y saludable.
+                a sesión terapéutica se desarrolla en 1 hora y ½ aprox.
+                Por medio de la Radiestesia; técnica de medición energética se detectan dolores, enfermedades, energías
+                nocivas y el estado de los Chakras.
+                Luego se neutralizan los dolores, consecuencia de eliminar las energías nocivas impregnadas en el campo
+                áurico mediante la Sanación Cuántica y la Decodiﬁcación Celular; métodos de armonización de cuerpos y
+                estructuras tanto físicas como sutiles.
+                Se realiza la sesión de Reiki; la canalización de la "Energia Vital Universal" y con ella se restablece
+                la alineación de los Chakras. Es un Sistema Holístico de Salud Complementario que considera que el ﬂujo
+                y el equilibrio de la Energía Vital Universal en el cuerpo humano es el fundamento subyacente de la
+                salud. El bloqueo de los Chakras causa enfermedad tanto física como psicológica.
+                Se procede a la Limpieza del Aura, devolviendo la vitalidad fisica y mental.
+                La finalidad de estas sesiones es restablecer el orden y la armonía, física, mental y espiritual,
+                consecuencia del desbloqueo energético en todo tu Ser y así poder recibir los maravillosos cambios que
+                te esperan.<br>
+                Namaste<br>
+                <a class="btn" href="#lista">Volver ↑</a>
             </p>
-        </main>
-      <footer>
-      <div class="container">
-        <p class="pie">&copy; All rights reserved.</p>
-      </div>
-      </footer>
-</body>
+        </div>
+        <div id="parrafo2">
+            <h2>Parrafo 2</h2>
+            <p class="texto">
 
-</html>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum laborum eaque corrupti maxime
+                doloremque
+                quidem
+                sit itaque nulla! Iure placeat qui, eaque error magni odio possimus animi, porro quam totam, hic
+                repellendus
+                quaerat. Dolor eaque possimus laborum incidunt assumenda, beatae, quas illo consequatur at officia
+                sapiente.
+                Laudantium, delectus dolore harum ea deleniti placeat corrupti ipsa, tempora, fugit blanditiis
+                veritatis
+                itaque alias aperiam aut nulla odit. Debitis omnis mollitia eos quae non illo facere, nemo corrupti?
+                Iusto
+                laudantium quae quibusdam iure eum magni maiores sed laborum vitae voluptas at ullam nisi
+                consequatur,
+                inventore deleniti aperiam voluptate dolorem? Laboriosam, tempore a sunt quibusdam, nesciunt,
+                laudantium
+                incidunt dolorem doloribus eligendi sed corporis error est ea libero facilis minima. Deleniti quas
+                natus
+                voluptates iusto. Numquam ea optio voluptatibus tempore voluptas, nesciunt quia officiis sit alias
+                delectus
+                tempora laudantium ducimus nobis dolorem aliquam reprehenderit obcaecati. Accusantium quisquam,
+                inventore
+                consequuntur a doloremque, quibusdam omnis blanditiis hic vero molestias expedita eum sunt at
+                adipisci
+                magnam fuga? Vel iste, unde ratione similique ipsam est non accusamus asperiores recusandae tempore
+                odit
+                totam ipsum atque repellat laudantium reprehenderit corrupti nostrum eveniet, fuga consequatur,
+                tempora
+                quidem quos molestias. Odio quisquam, totam praesentium nobis excepturi nulla dolorum, autem iure
+                non
+                consectetur voluptates. ipsum, dolor sit amet consectetur adipisicing elit. Ex facilis veritatis
+                aperiam
+                dolore quia impedit, ad suscipit laboriosam, nam dolor qui molestiae eius sint architecto possimus
+                sunt
+                voluptate eos fuga iste consequuntur quam corporis odio. Atque et dicta omnis harum possimus alias!
+                Fuga
+                rerum totam commodi, nostrum a assumenda ea repellendus quaerat ex explicabo officia. Ipsum quod,
+                maxime
+                voluptatum aspernatur quo mollitia cupiditate perferendis, nam officiis soluta, minus aut. Tempore
+                ipsum
+                sequi, quidem repudiandae perspiciatis consequatur aut accusamus corporis excepturi maxime beatae
+                atque
+                libero magnam neque illo, facilis alias ab. Debitis voluptas similique vero quod nihil culpa cum
+                temporibus
+                est.ipsum dolor sit amet consectetur adipisicing elit. Aperiam ratione possimus, numquam rem facilis
+                quaerat inventore ad molestiae quasi assumenda cum, modi, cupiditate nihil tempore necessitatibus.
+                Nam
+                dolor
+                expedita possimus. Hic modi molestias accusantium aliquam sapiente? Id autem quis, iure veniam
+                officia
+                alias, ratione ab modi, quam consequatur voluptatibus et reiciendis doloremque dignissimos! Modi
+                voluptate
+                consequatur aperiam dolorum rerum deleniti.<br>
+                <a class="btn" href="#lista">Volver ↑</a>
+            </p>
+        </div>
+        <div id="parrafo3">
+            <h2>Parrafo 3</h2>
+            <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum maxime necessitatibus illum
+                labore
+                numquam
+                est libero ullam repellendus voluptas amet, dolore laborum incidunt porro tempore sed velit? Esse neque
+                rem
+                id, architecto ipsam doloremque earum est dolores quas vitae, laborum laboriosam dolor quam quia! Quas
+                sapiente nemo rem quod blanditiis alias ea cupiditate aliquam animi possimus enim, sint commodi
+                consequuntur! Recusandae ea voluptatum enim omnis, odio corporis, praesentium iste sint quidem
+                exercitationem dolorem dolore? Blanditiis minus perspiciatis facilis nam, ipsum ut consequatur amet ad
+                temporibus recusandae nostrum distinctio explicabo consequuntur eius similique dicta provident
+                voluptatum?
+                Sit repellat repellendus eius quis.ipsum dolor sit amet consectetur adipisicing elit. Aperiam ratione
+                possimus, numquam rem facilis
+                quaerat inventore ad molestiae quasi assumenda cum, modi, cupiditate nihil tempore necessitatibus. Nam
+                dolor
+                expedita possimus. Hic modi molestias accusantium aliquam sapiente? Id autem quis, iure veniam officia
+                alias, ratione ab modi, quam consequatur voluptatibus et reiciendis doloremque dignissimos! Modi
+                voluptate
+                consequatur aperiam dolorum rerum deleniti.<br>
+                <a class="btn" href="#lista">Volver ↑</a>
+            </p>
+        </div>
+        <div id="parrafo4">
+            <h2>Parrafo 4</h2>
+            <p class="texto">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, omnis consequatur. Asperiores
+                corrupti, suscipit iusto fugiat libero magni nulla dolor quas ducimus temporibus deserunt veritatis
+                obcaecati dignissimos ipsum, perferendis corporis beatae qui tenetur et dolore? Eos ea nihil, quaerat
+                consectetur, quae rerum consequuntur necessitatibus dolorem similique veritatis tempora eum laborum
+                iusto. Explicabo ex esse expedita corporis voluptates iusto. Nobis tenetur cum minus nihil hic vero,
+                minima fugiat autem a laudantium ut, velit distinctio tempore facere id enim est reiciendis accusantium
+                reprehenderit. Quas error cum eius. Dolorum, esse sunt! Adipisci ipsum ipsam accusamus fuga aperiam vel
+                perferendis facere itaque facilis omnis. ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+                ratione possimus, numquam rem facilis
+                quaerat inventore ad molestiae quasi assumenda cum, modi, cupiditate nihil tempore necessitatibus. Nam
+                dolor
+                expedita possimus. Hic modi molestias accusantium aliquam sapiente? Id autem quis, iure veniam officia
+                alias, ratione ab modi, quam consequatur voluptatibus et reiciendis doloremque dignissimos! Modi
+                voluptate
+                consequatur aperiam dolorum rerum. <br>
+                <a class="btn" href="#lista">Volver ↑</a>
+            </p>
+        </div>
+    </main>
+    <footer>
+        <div class="container">
+            <p class="pie">&copy; All rights reserved.</p>
+        </div>
+    </footer>
