Inicio Validacion Formulario

--- a/reservas.html
+++ b/reservas.html
@@ -35,12 +35,12 @@
 
           <div class="input">
             <span class="details">Nombre</span>
-            <input type="text" class="input-Box" placeholder="Escriba su Nombre" id="nombre">
+            <input type="text" class="input-Box" placeholder="Escriba su Nombre" id="name">
           </div>
 
           <div class="input">
             <span class="details">Apellido</span>
-            <input type="text" class="input-Box" placeholder="Escriba su Apellido" id="apellido">
+            <input type="text" class="input-Box" placeholder="Escriba su Apellido" id="lastName">
           </div>
 
           <div class="input">
@@ -50,7 +50,7 @@
 
           <div class="input">
             <span class="details">Fecha de Nacimiento</span>
-            <input type="date" class="input-Box" placeholder="dd/mm/aaaa" id="fechaNacimiento">
+            <input type="date" class="input-Box" placeholder="dd/mm/aaaa" id="birthDate">
           </div>
         </div>
 
@@ -64,12 +64,12 @@
 
           <div class="genderOption">
 
-            <input type="radio" name="genero" class="" placeholder="" id="genero1">
-            <Label class="genero" for="genero1">Hombre</Label>
-            <input type="radio" name="genero" class="" placeholder="" id="genero2">
-            <Label class="genero" for="genero2">Mujer</Label>
-            <input type="radio" name="genero" class="" placeholder="" id="genero3">
-            <Label class="genero" for="genero3">Prefiero no decir</Label>
+            <input type="radio" name="gender" class="" placeholder="" id="gender1">
+            <Label class="genero" for="gender1">Hombre</Label>
+            <input type="radio" name="gender" class="" placeholder="" id="gendero2">
+            <Label class="genero" for="gender2">Mujer</Label>
+            <input type="radio" name="gender" class="" placeholder="" id="gender3">
+            <Label class="genero" for="gender3">Prefiero no decir</Label>
 
           </div>
 
@@ -79,11 +79,11 @@
 
           <div class="input">
             <span class="details">E-mail</span>
-            <input type="email" class="input-Box" placeholder="ejemplo@ejemplo.com" id="correo">
+            <input type="email" class="input-Box" placeholder="ejemplo@ejemplo.com" id="email">
           </div>
           <div class="input">
             <span class="details">Teléfono</span>
-            <input type="number" class="input-Box" placeholder="Numero de Teléfono" id="telefono">
+            <input type="number" class="input-Box" placeholder="Numero de Teléfono" id="phone">
           </div>
 
         </div>
@@ -104,13 +104,13 @@
 
           <div class="input">
             <span class="details">Fecha</span>
-            <input type="date" class="input-Box" placeholder="dd/mm/aaaa" id="fechaTurno">
+            <input type="date" class="input-Box" placeholder="dd/mm/aaaa" id="appointmentDate">
           </div>
 
         </div>
 
         <div class="buttonArea">
-          <button class="button">Continuar</button>
+          <button type="submit" class="button" id="button">Continuar</button>
         </div>
       </form>
     </div>
@@ -122,6 +122,7 @@
       <p class="pie">&copy; All rights reserved.</p>
     </div>
   </footer>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
