--- a/reservas.html
+++ b/reservas.html
@@ -62,12 +62,12 @@
 
           <div class="input">
             <span class="details">Nombre</span>
-            <input type="text" class="input-Box" placeholder="Escriba su Nombre" id="nombre">
+            <input type="text" class="input-Box" placeholder="Escriba su Nombre" id="name">
           </div>
 
           <div class="input">
             <span class="details">Apellido</span>
-            <input type="text" class="input-Box" placeholder="Escriba su Apellido" id="apellido">
+            <input type="text" class="input-Box" placeholder="Escriba su Apellido" id="lastName">
           </div>
 
           <div class="input">
@@ -77,7 +77,7 @@
 
           <div class="input">
             <span class="details">Fecha de Nacimiento</span>
-            <input type="date" class="input-Box" placeholder="dd/mm/aaaa" id="fechaNacimiento">
+            <input type="date" class="input-Box" placeholder="dd/mm/aaaa" id="birthDate">
           </div>
         </div>
 
@@ -91,12 +91,12 @@
 
           <div class="genderOption">
 
-            <input type="radio" name="genero" class="" placeholder="" id="genero1">
-            <Label class="genero" for="genero1">Hombre</Label>
-            <input type="radio" name="genero" class="" placeholder="" id="genero2">
-            <Label class="genero" for="genero2">Mujer</Label>
-            <input type="radio" name="genero" class="" placeholder="" id="genero3">
-            <Label class="genero" for="genero3">Prefiero no decir</Label>
+            <input type="radio" name="gender" class="" id="gender2" value="mujer" checked>
+            <Label class="genero" for="gender2">Mujer</Label>
+            <input type="radio" name="gender" class="" id="gender1" value="hombre">
+            <Label class="genero" for="gender1">Hombre</Label>
+            <input type="radio" name="gender" class="" id="gender3" value="otro">
+            <Label class="genero" for="gender3">Prefiero no decir</Label>
 
           </div>
 
@@ -106,11 +106,11 @@
 
           <div class="input">
             <span class="details">E-mail</span>
-            <input type="email" class="input-Box" placeholder="ejemplo@ejemplo.com" id="correo">
+            <input type="email" class="input-Box" placeholder="ejemplo@ejemplo.com" id="email">
           </div>
           <div class="input">
             <span class="details">Teléfono</span>
-            <input type="number" class="input-Box" placeholder="Numero de Teléfono" id="telefono">
+            <input type="number" class="input-Box" placeholder="Numero de Teléfono" id="phone">
           </div>
 
         </div>
@@ -131,7 +131,7 @@
 
           <div class="input">
             <span class="details">Fecha</span>
-            <input type="date" class="input-Box" placeholder="dd/mm/aaaa" id="fechaTurno">
+            <input type="date" class="input-Box" placeholder="dd/mm/aaaa" id="appointmentDate">
           </div>
 
         </div>
@@ -149,6 +149,7 @@
       <p class="pie">&copy; All rights reserved.</p>
     </div>
   </footer>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
