--- a/hacer.html
+++ b/hacer.html
@@ -27,7 +27,7 @@
         </label>   
         <h3 id="lista"></h3>
         <div class="contenedor">
-            <img class="imag" src="img/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
+            <img class="imag" src="imagen/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
         </div>    
             <nav> 
             <ul class="nav">
