--- a/reservas.html
+++ b/reservas.html
@@ -62,7 +62,7 @@
           
                     <div class="input">
                       <span class="details">Nombre</span>
-                      <input type="text" class="input-Box" placeholder="Escriba su Nombre" id="nombre">
+                      <input type="text" class="input-Box" placeholder="Escriba su Nombre" id="name">
                     </div>
           
                     <div class="input">
@@ -147,6 +147,7 @@
         <p class="pie">&copy; All rights reserved.</p>
       </div>
       </footer>
+      <script src="./js/main.js"></script>
 </body>
 
 </html>
