--- a/index.html
+++ b/index.html
@@ -109,5 +109,5 @@
       </div>
       </footer>
 </body>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </html>
