Cambios final en carrossuel

--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ysabeau&display=swap" rel="stylesheet">
 
-    <!--Slider-->
-    <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
-<link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
     <title>Gaia Holística</title>
 </head>
 
 <body>
         <header class="header">	
             <div class="contenedor">
-                <img class="imag" src="imagenes/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
+                <img class="imag" src="imagen/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
             </div>
             <input type="checkbox" id="menu-check">
             <label id="menu" for="menu-check">
@@ -91,9 +88,9 @@
 <!--FIN Slider-->
 
 			<h2 class="animate__animated animate__fadeInLeft">Reservas</h2>
-				
-
-            <h2 class="animate__animated animate__fadeInLeft">Contactanos</h2>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, dolore repellat expedita enim quibusdam voluptatibus, a eaque unde distinctio veniam voluptate! Consequuntur quis cumque laudantium! Et beatae facilis odio officia.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque quibusdam deserunt quos at officia beatae expedita odit a, tempora porro obcaecati qui. Id delectus provident cumque iste, magni quia!</p>
+                <h2 class="animate__animated animate__fadeInLeft">Contactanos</h2>
                 <p class="texto">
 				Nullam ut erat sit amet elit ultricies tempor vel eget magna. Vivamus vitae diam purus. Fusce semper
                 nisl a nulla congue feugiat. Maecenas et tincidunt felis, dapibus rhoncus sapien. Maecenas tortor
