--- a/contacto.html
+++ b/contacto.html
@@ -23,6 +23,11 @@
 			<div class="contenedor">
 				<img class="imag" src="imagen/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
 			</div>    
+			<input type="checkbox" id="menu-check">
+            <label id="menu" for="menu-check">
+                <span id="menu-abrir">&#9776</span>
+                <span id="menu-cerrar">X</span>
+            </label> 
 				<nav> 
 				<ul class="nav">
 					<li><a class="btn" href="index.html">Inicio</a></li>
