--- a/reservas.html
+++ b/reservas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reservas.css">
 
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,6 +53,8 @@
         </header>
 	</div>
         <main class="contenido">
+
+          <h1>Reseva una cita con nosotros</h1>
 
             <div class="booking">
 
@@ -149,7 +151,7 @@
               <p class="pie">&copy; All rights reserved.</p>
             </div>
           </footer>
-          <script src="./js/main.js"></script>
+          <script src="./js/reservas.js"></script>
         </body>
 
 </html>
