Mejoras Irene/Responsive Reserva

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/nosotros.css">
-    
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style8.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <!--Fuentes-->
@@ -18,7 +19,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header">	
         <div class="contenedor">
             <img class="imag" src="imagen/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
         </div>
@@ -26,31 +27,16 @@
         <label id="menu" for="menu-check">
             <span id="menu-abrir">&#9776</span>
             <span id="menu-cerrar">X</span>
-        </label>
-        <nav>
+        </label>   
+            <nav> 
             <ul class="nav">
                 <li><a class="btn" href="index.html">Inicio</a></li>
                 <li><a class="btn" href="hacer.html">¿Que hacemos?</a>
-
-                    <!--menu desplegable-->
-                    <ul>
-                        <li><a class="btn" href="#parrafo1">¿Que es el Reiki?</a></li>
-                        <li><a class="btn" href="#parrafo2">Parrafo 2</a></li>
-                        <li><a class="btn" href="#parrafo3">Parrafo 3</a></li>
-                        <li><a class="btn" href="#parrafo4">Parrafo 4</a></li>
-                        <li><a class="btn" href="https://api.whatsapp.com/send/?</li>phone=5491149720228 "
-                                target="_blank">Whatsapp </a></li>
-                        <li><a class="btn"
-                                href="mailto:direccion@destinatario.com?&subject=Asunto</li>%20con%20espacios&body=mensaje">
-                                Enviar mail</a>
-                    </ul>
-                </li>
-                <!--fin <desplegable--></desplegable-->
-
                 <li><a class="btn" href="reservas.html">Reservas</a></li>
                 <li><a class="btn" href="contacto.html">Contacto</a></li>
+                <li><a class="btn" href="Nosotros.html">Nosotros</a></li>
             </ul>
-        </nav>
+         </nav>
     </header>
     </div>
     <section class="quote">
