--- a/hacer.html
+++ b/hacer.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style2.css">
-
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style8.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,24 +23,24 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header">	
+        <div class="contenedor">
+            <img class="imag" src="imagen/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
+        </div>
         <input type="checkbox" id="menu-check">
         <label id="menu" for="menu-check">
             <span id="menu-abrir">&#9776</span>
             <span id="menu-cerrar">X</span>
-        </label>
-        <h3 id="lista"></h3>
-        <div class="contenedor">
-            <img class="imag" src="img/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
-        </div>
-        <nav>
+        </label>   
+            <nav> 
             <ul class="nav">
                 <li><a class="btn" href="index.html">Inicio</a></li>
-                <li><a class="btn" href="hacer.html">¿Que hacemos?</a> </li>
+                <li><a class="btn" href="hacer.html">¿Que hacemos?</a>
                 <li><a class="btn" href="reservas.html">Reservas</a></li>
                 <li><a class="btn" href="contacto.html">Contacto</a></li>
+                <li><a class="btn" href="Nosotros.html">Nosotros</a></li>
             </ul>
-        </nav>
+         </nav>
     </header>
     <main class="contenido">
             
@@ -57,8 +59,9 @@
                     </ul>
                 </nav>
             </div>
+            <h2 class="animate__animated animate__fadeInLeft">El Reiki</h2>
             <div id="parrafo1">
-                <h2>El Reiki</h2>
+                
                 <p class="texto">
                     Es una terapia basada en la transmisión de energía a través de las manos. El objetivo del Reiki es
                     buscar y encontrar el equilibrio físico, mental y espiritual.
