--- a/reservas.html
+++ b/reservas.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/reservas.css">
-
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style8.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!--Fuentes-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,43 +23,29 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header">	
+    <div class="contenedor">
+        <img class="imag" src="imagen/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
+    </div>
     <input type="checkbox" id="menu-check">
     <label id="menu" for="menu-check">
-      <span id="menu-abrir">&#9776</span>
-      <span id="menu-cerrar">X</span>
-    </label>
-    <div class="contenedor">
-      <img class="imag" src="imagen/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
-    </div>
-    <nav>
-      <ul class="nav">
-        <li><a class="btn" href="index.html">Inicio</a></li>
-        <li><a class="btn" href="hacer.html">¿Que hacemos?</a>
-
-          <!--menu desplegable-->
-          <ul>
-            <li><a class="btn" href="#parrafo1">¿Que es el Reiki?</a></li>
-            <li><a class="btn" href="#parrafo2">Parrafo 2</a></li>
-            <li><a class="btn" href="#parrafo3">Parrafo 3</a></li>
-            <li><a class="btn" href="#parrafo4">Parrafo 4</a></li>
-            <li><a class="btn" href="https://api.whatsapp.com/send/?</li>phone=5491149720228 ">Whatsapp </a></li>
-            <li><a class="btn"
-                href="mailto:direccion@destinatario.com?&subject=Asunto</li>%20con%20espacios&body=mensaje">
-                Enviar mail</a>
-          </ul>
-        </li>
-        <!--fin <desplegable--></desplegable-->
-
-        <li><a class="btn" href="reservas.html">Reservas</a></li>
-        <li><a class="btn" href="contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
+        <span id="menu-abrir">&#9776</span>
+        <span id="menu-cerrar">X</span>
+    </label>   
+        <nav> 
+        <ul class="nav">
+            <li><a class="btn" href="index.html">Inicio</a></li>
+            <li><a class="btn" href="hacer.html">¿Que hacemos?</a>
+            <li><a class="btn" href="reservas.html">Reservas</a></li>
+            <li><a class="btn" href="contacto.html">Contacto</a></li>
+            <li><a class="btn" href="Nosotros.html">Nosotros</a></li>
+        </ul>
+     </nav>
+</header>
   </div>
   <main class="contenido">
 
-    <h1>Reseva una cita con nosotros</h1>
+    <h2 class="animate__animated animate__fadeInLeft">Reseva una cita con nosotros</h2>
 
     <div class="booking">
 
@@ -101,7 +89,7 @@
             <input type="radio" name="gender" class="" id="gender1" value="hombre">
             <Label class="genero" for="gender1">Hombre</Label>
             <input type="radio" name="gender" class="" id="gender3" value="otro">
-            <Label class="genero" for="gender3">Prefiero no decir</Label>
+            <Label class="genero" for="gender3">Otro</Label>
 
           </div>
 
@@ -164,6 +152,7 @@
 
         <div class="buttonArea">
           <button class="button">Continuar</button>
+          <input class="button" type="reset">
         </div>
       </form>
     </div>
