agreagdo de iconos

--- a/contacto.html
+++ b/contacto.html
@@ -19,6 +19,8 @@
     <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
 <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
     <title>Gaia Holística</title>
+
+	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
 </head>
 
 <body>
@@ -85,6 +87,24 @@
 			<button onclick="showAlert()">Enviar</button>
 			<input type="reset">
 	</form>
+
+	<h2 class="animate__animated animate__fadeInLeft">Nuestras Redes</h2>
+	<div class="icons">
+		<a href="https://www.facebook.com" target="_blank">
+			<i class="fi fi-brands-facebook"></i>
+		</a>
+		<a href="https://www.instagram.com" target="_blank">
+			<i class="fi fi-brands-instagram"></i>
+		</a>
+		<a href="https://www.tiktok.com" target="_blank">
+			<i class="fi fi-brands-tik-tok"></i>
+		</a>
+		<a href="https://www.whatsapp.com" target="_blank">
+			<i class="fi fi-brands-whatsapp"></i>
+		</a>
+
+	</div>
+
 	<section id="mapas">
 		<div>
 			<h4>Sucursal CABA</h4><br>
