--- a/contacto.html
+++ b/contacto.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+    <link rel="shortcut icon" href="imagen/favicon.png">
 	<!--CSS-->
 	<link rel="stylesheet" href="css/contacto.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+	<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style8.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
