--- a/reservas.html
+++ b/reservas.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="imagen/favicon.png">
   <link rel="stylesheet" href="css/reservas.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style8.css">
@@ -164,7 +165,7 @@
       <p class="pie">&copy; All rights reserved.</p>
     </div>
   </footer>
-  <script src="./js/reservas.js"></script>
+  <script src="js/reservas.js"></script>
 </body>
 
 </html>
