correcion pagina hacer

--- a/hacer.html
+++ b/hacer.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <header class="header">	
+    <header class="header" id="lista">	
         <div class="contenedor">
             <img class="imag" src="imagen/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
         </div>
