--- a/hacer.html
+++ b/hacer.html
@@ -39,7 +39,7 @@
                 <li><a class="btn" href="hacer.html">¿Que hacemos?</a>
                 <li><a class="btn" href="reservas.html">Reservas</a></li>
                 <li><a class="btn" href="contacto.html">Contacto</a></li>
-                <li><a class="btn" href="Nosotros.html">Nosotros</a></li>
+                <li><a class="btn" href="nosotros.html">Nosotros</a></li>
             </ul>
          </nav>
     </header>
