nuevo id caja5  para responsive

--- a/hacer.html
+++ b/hacer.html
@@ -45,7 +45,7 @@
     </header>
     <main class="contenido">
             
-            <div class="container2">
+            <div id="caja5">
                 <nav>
                     <ul class="nav">
                         <li><a class="btn1" href="#parrafo1">¿Que es el Reiki?</a></li>
