Correccion sstilos reserva

--- a/producto_nuevo.html
+++ b/producto_nuevo.html
@@ -53,7 +53,7 @@
 
         <div class="booking">
 
-            <div class="formContent">
+            <div class="formAddingContent">
 
 
                 <form action="#" class="formAdding">
