--- a/producto_nuevo.html
+++ b/producto_nuevo.html
@@ -53,7 +53,7 @@
 
         <div class="booking">
 
-            <div class="formAddingContent">
+            <div id="app" class="formAddingContent">
 
 
                 <form action="#" class="formAdding">
@@ -97,7 +97,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-    <script src="js/inventario.js"></script>
+        <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+        <script src="./js/inventario.js"></script>
 </body>
 
 </html>
