Actualización Front-end

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <header class="header">	
+    <header class="header">
         <div class="contenedor">
             <img class="imag" src="imagen/Logo.png" alt="Gaia Holística" width="15%" height="15%" />
         </div>
@@ -28,8 +28,8 @@
         <label id="menu" for="menu-check">
             <span id="menu-abrir">&#9776</span>
             <span id="menu-cerrar">X</span>
-        </label>   
-            <nav> 
+        </label>
+        <nav>
             <ul class="nav">
                 <li><a class="btn" href="index.html">Inicio</a></li>
                 <li><a class="btn" href="hacer.html">¿Que hacemos?</a>
@@ -37,20 +37,28 @@
                 <li><a class="btn" href="contacto.html">Contacto</a></li>
                 <li><a class="btn" href="nosotros.html">Nosotros</a></li>
             </ul>
-         </nav>
+        </nav>
     </header>
     </div>
     <section class="quote">
-        
+
         <h2 class="animate__animated animate__fadeInLeft">Acerca de Nosotros</h2>
-        <p class="aboutUs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis ut eligendi sapiente, totam corrupti,
-            dolores assumenda recusandae quas itaque sequi eum quam! Mollitia architecto laudantium rem quisquam cumque
-            ipsam delectus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, nobis. Ex delectus magni
-            nisi quidem quos natus explicabo reiciendis, pariatur exercitationem voluptate rerum officia ullam est
-            accusantium odio! Hic, qui.</p>
+        <p class="aboutUs">El instituto como tal tiene su origen en los Estados Unidos, en la ciudad de Nueva York muy
+            cerca de uno de los lugares con mejor energia de esa ciudad, el parque central. Alli en la decada del 60 el
+            Maestro / Terapeuta, un Instructor de meditación Integral Luciano Robaras luego de una experiencia
+            transicional vivida en uno de sus viajes por oriente, funda el GAIA Holistic Institut, que se convertira
+            rapidamente en uno de los sitios de meditacion, recuperacion energetica y sanacion de los mas importantes
+            miembros de la sociedad neoyorquina de esa decada. Las Imagenes nos muestran las instalaciones originales
+            del instituto donde claramente pude notarse que la armoniosa arquitectura, la disposicion de los ambientes
+            asi como los materiales elegidos para el mobiliario estan orientados a favorecer los estados energeticos y
+            el clima de relajacion necesarios para la recuperacion total de los pacientes. En la decade del 90 el
+            maestro Robaras decidio beneficiar a nuestro pais, extrapolando la experiencia de sus años en Estados
+            Unidos. Este formato de probado exito fue entonces traido a nuestro pais y adaptado a cada una de las sedes
+            en Argentina del instituto, para lograr asi establecer el balance enrgetico ideal, a fin de garantizar el
+            maximo beneficio en las terapias aplicadas.</p>
 
         <h2 class="animate__animated animate__fadeInLeft">Nuesta Fundadora</h2>
-        
+
         <div class="profileContainer">
 
             <div class="profileImage">
@@ -60,9 +68,7 @@
             <div class="profileDescription">
                 <span id="profileName" class="profileName"></span>
                 <p class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero velit quas et eum repudiandae
-                    pariatur. Odio aut deleniti itaque rerum neque rem cupiditate repellendus laboriosam tenetur,
-                    molestias impedit provident ea.
+                    Fundadora de esta institución, desde 2002, empezó a enseñar el método curativo a traves de esta técnica de sanación milenaria.
                 </p>
             </div>
         </div>
