Agregado de Inventario en Nabvar

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -34,6 +34,7 @@
                 <li><a class="btn" href="index.html">Inicio</a></li>
                 <li><a class="btn" href="hacer.html">¿Que hacemos?</a>
                 <li><a class="btn" href="reservas.html">Reservas</a></li>
+                <li><a class="btn" href="inventario.html">Productos</a></li>
                 <li><a class="btn" href="contacto.html">Contacto</a></li>
                 <li><a class="btn" href="nosotros.html">Nosotros</a></li>
             </ul>
