--- a/contacto.html
+++ b/contacto.html
@@ -54,6 +54,7 @@
 					fin desplegable-->               
 					
 					<li><a class="btn" href="reservas.html">Reservas</a></li>
+					<li><a class="btn" href="inventario.html">Productos</a></li>
 					<li><a class="btn" href="contacto.html">Contacto</a></li>
 					<li><a class="btn" href="nosotros.html">Nosotros</a></li>
 				</ul>
