--- a/inventario.html
+++ b/inventario.html
@@ -41,6 +41,7 @@
                 <li><a class="button" href="index.html">Inicio</a></li>
                 <li><a class="button" href="hacer.html">¿Que hacemos?</a>
                 <li><a class="button" href="reservas.html">Reservas</a></li>
+                <li><a class="btn" href="inventario.html">Productos</a></li>
                 <li><a class="button" href="contacto.html">Contacto</a></li>
                 <li><a class="button" href="nosotros.html">Nosotros</a></li>
             </ul>
